[package]
name = "webhook"
version = "1.0.0"
authors = ["thoo0224 <thomasplatschorre@gmail.com>"]
edition = "2018"
description = "Discord Webhook API Wrapper"
readme = "README.md"
repository = "https://github.com/thoo0224/webhook-rs"
license-file = "LICENSE.md"
keywords = ["discord", "discord-api", "webhook", "discord-webhook"]
exclude = ["src/bin/*"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
tokio = { version = "0.2", features = ["full"] }