[package]
name = "webhook"
version = "1.0.1"
authors = ["thoo0224 <thomasplatschorre@gmail.com>"]
edition = "2018"
description = "Discord Webhook API Wrapper"
readme = "README.md"
repository = "https://github.com/thoo0224/webhook-rs"
license = "Apache-2.0"
keywords = ["discord", "discord-api", "webhook", "discord-webhook"]
exclude = ["src/bin/*"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["full"] }
