[package]
name = "webhook"
version = "2.1.1"
edition = "2018"
description = "Discord Webhook API Wrapper"
readme = "README.md"
repository = "https://github.com/thoo0224/webhook-rs"
license = "MIT"
keywords = ["discord", "discord-api", "webhook", "discord-webhook"]
authors = ["Thomas Platschorre"]
publish = true

exclude = [
    "examples/*",
    ".env"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client"]
client = ["hyper", "hyper-tls"]
full = ["client", "models"]
models = []

[dependencies]
hyper = { version = "0.14.16", features = ["client", "http1", "http2", "tcp"], optional = true }
hyper-tls = { version = "0.5.0", features = ["vendored"], optional = true }

serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["full"] }
dotenv = "0.15.0"